# OxylusEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  FlatEngine.sln  FlatEngine.vcxproj  FlatEngine.vcxproj.filters  LICENSE.txt  README.md  imgui.ini  premake5.lua
Oxylus/: CMakeLists.txt  cpp.hint  premake5.lua
Oxylus/src/: OxylusEngine.h  oxpch.cpp  oxpch.h
Oxylus/src/Assets/: Asset.h  Asset.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  Assets.h  EmbedAsset.cpp  EmbedAsset.h  EmbedAsset.hpp  Material.cpp  Material.h  Material.hpp  MaterialSerializer.cpp  MaterialSerializer.h  Texture.cpp  Texture.hpp  TextureAsset.cpp  TextureAsset.h  TextureAsset.hpp
Oxylus/src/Audio/: AudioEngine.cpp  AudioEngine.h  AudioEngine.hpp  AudioListener.cpp  AudioListener.h  AudioListener.hpp  AudioSource.cpp  AudioSource.h  AudioSource.hpp
Oxylus/src/Core/: App.cpp  App.h  App.hpp  Application.cpp  Application.h  ApplicationEvents.h  ApplicationEvents.hpp  Base.h  Base.hpp  Buffer.h  Buffer.hpp  Components.h  Core.cpp  Core.h  ESystem.cpp  ESystem.h  ESystem.hpp  EmbeddedLogo.hpp  Entity.cpp  Entity.h  EntryPoint.h  EntryPoint.hpp  FileSystem.cpp  FileSystem.h  FileSystem.hpp  Input.cpp  Input.h  Input.hpp  Keycodes.h  Keycodes.hpp  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Linker.h  Memory.cpp  Memory.h  ModuleManager.cpp  (+17 more)
Oxylus/src/Event/: Event.cpp  Event.h
Oxylus/src/FileSystem/: FileSystem.h
Oxylus/src/Modules/: Linker.h  Linker.hpp  ModuleInterface.h  ModuleInterface.hpp  ModuleRegistry.cpp  ModuleRegistry.h  ModuleRegistry.hpp  ModuleUtil.cpp  ModuleUtil.h  ModuleUtil.hpp
Oxylus/src/Physics/: JoltBuild.h  JoltHelpers.cpp  JoltHelpers.h  JoltHelpers.hpp  PhyiscsInterfaces.cpp  PhyiscsInterfaces.h  Physics.cpp  Physics.h  Physics.hpp  PhysicsHelpers.cpp  PhysicsHelpers.h  PhysicsInterfaces.cpp  PhysicsInterfaces.h  PhysicsInterfaces.hpp  PhysicsMaterial.h  PhysicsRigidbodies.cpp  PhysicsRigidbodies.h  PhysicsRigidbody.cpp  PhysicsRigidbody.h  PhysicsUtils.cpp  PhysicsUtils.h  PhysxHelpers.cpp  PhysxHelpers.h  RayCast.h  RayCast.hpp
Oxylus/src/Render/: BoundingVolume.cpp  BoundingVolume.h  BoundingVolume.hpp  Camera.cpp  Camera.h  Camera.hpp  DebugRenderer.cpp  DebugRenderer.h  DebugRenderer.hpp  DefaultRenderPipeline.cpp  DefaultRenderPipeline.h  Frustum.cpp  Frustum.h  Mesh.cpp  Mesh.h  MeshVertex.h  ParticleSystem.cpp  ParticleSystem.h  RenderGraph.cpp  RenderGraph.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.hpp  RendererCommon.cpp  RendererCommon.h  RendererConfig.cpp  RendererConfig.h  RendererData.h  ResourcePool.cpp  ResourcePool.h  SceneRendererEvents.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Oxylus/src/Scene/: Components.h  Components.hpp  Entity.cpp  Entity.h  Entity.hpp  EntitySerializer.cpp  EntitySerializer.h  EntitySerializer.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneManager.cpp  SceneManager.h  SceneRenderer.cpp  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h  SceneSerializer.hpp
Oxylus/src/Scripting/: LuaApplicationBindings.cpp  LuaApplicationBindings.h  LuaApplicationBindings.hpp  LuaAssetManagerBindings.cpp  LuaAssetManagerBindings.h  LuaAssetManagerBindings.hpp  LuaAudioBindings.cpp  LuaAudioBindings.h  LuaAudioBindings.hpp  LuaComponentBindings.cpp  LuaComponentBindings.h  LuaComponentBindings.hpp  LuaComponentInterface.h  LuaDebugBindings.cpp  LuaDebugBindings.h  LuaDebugBindings.hpp  LuaECSBindings.cpp  LuaECSBindings.h  LuaHelpers.h  LuaHelpers.hpp  LuaImGuiBindings.h  LuaImGuiBindings.hpp  LuaInputBindings.cpp  LuaInputBindings.h  LuaInputBindings.hpp  LuaManager.cpp  LuaManager.h  LuaManager.hpp  LuaMathBindings.cpp  LuaMathBindings.h  LuaMathBindings.hpp  LuaPhysicsBindings.cpp  LuaPhysicsBindings.h  LuaPhysicsBindings.hpp  LuaRendererBindings.cpp  LuaRendererBindings.h  LuaRendererBindings.hpp  LuaSceneBindings.cpp  LuaSceneBindings.h  LuaSceneBindings.hpp  (+7 more)
Oxylus/src/Thread/: TaskScheduler.cpp  TaskScheduler.h  TaskScheduler.hpp  Thread.cpp  Thread.h  Thread.hpp  ThreadManager.cpp  ThreadManager.h  ThreadManager.hpp
Oxylus/src/UI/: ExternalConsoleSink.cpp  ExternalConsoleSink.h  IGUI.cpp  IGUI.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp  OxUI.cpp  OxUI.h  OxUI.hpp  RuntimeConsole.cpp  RuntimeConsole.h  RuntimeConsole.hpp  imgui_frag.h  imgui_vert.h
Oxylus/src/Utils/: Archive.cpp  Archive.h  Archive.hpp  CVars.cpp  CVars.h  CVars.hpp  ColorUtils.h  EmbeddedMissingTexture.h  FileDialogs.cpp  FileDialogs.h  FileDialogs.hpp  FileSystem.cpp  FileSystem.h  FileUtils.cpp  FileUtils.h  FileWatch.h  ImGuiScoped.h  Log.cpp  Log.h  Log.hpp  OxMath.cpp  OxMath.h  OxMath.hpp  Profiler.cpp  Profiler.h  Profiler.hpp  Random.cpp  Random.h  Random.hpp  StringUtils.h  StringUtils.hpp  TimeStep.h  Timer.cpp  Timer.h  Timer.hpp  Timestep.cpp  Timestep.h  Timestep.hpp  Toml.cpp  Toml.h  (+5 more)
OxylusEditor/: CMakeLists.txt  imgui.ini  premake5.lua
OxylusEditor/Resources/Objects/: capsule.glb  cube.glb  cube.gltf  plane.glb  plane.gltf  sphere.glb  sphere.gltf
OxylusEditor/Resources/Shaders/: AtmosphericScattering.comp  AtmosphricScattering.comp  Bloom.comp  Bloom.frag  BloomDownsample.comp  BloomPrefilter.comp  BloomUpsample.comp  Blur.frag  Common.glsl  Common.hlsli  Composite.comp  Composite.frag  Compute.comp  ComputeFrustumGrid.comp  ComputeLightList.comp  Conversions.glsl  Conversions.hlsli  DepthNormalPass.frag  DepthNormalPass.vert  DepthNormalPrePass.hlsl  DepthOfField.comp  DirectShadowDepthPass.frag  DirectShadowDepthPass.vert  DirectShadowDepthpass.frag  DirectShadowDepthpass.vert  DirectionalShadowPass.hlsl  Editor_IDPass.frag  Editor_IDPass.vert  EquirectangularToCubemap.frag  FXAA.frag  (+55 more)
OxylusEditor/src/: Commands.h  EditorContext.h  EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  EditorTheme.cpp  EditorTheme.h  EditorTheme.hpp  OxylusEditorApp.cpp
OxylusRuntime/: CMakeLists.txt  README.md
OxylusRuntime/src/: App.cpp  CustomRenderPipeline.cpp  CustomRenderPipeline.h  RuntimeLayer.cpp  RuntimeLayer.h
(+210 files in other folders)
